Increased Canvas size for the CircleLayerDelegate that is used for MD ripples.

The Bookmark ripple was getting clipped on devices with a 2x scale
factor due to the Canvas not being large enough.

BUG=594243

TEST=manual

Review URL: https://codereview.chromium.org/1806563002

Cr-Commit-Position: refs/heads/master@{#381232}

Former-commit-id: ce72fa9b7010a4c72b9363469087444ec4f77792